initial shell of UI